# astroviewer

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: release.yml
examples/: gev_features.rs  gev_force_ip.rs  gev_spike.rs  gev_stream.rs
packaging/macos/: AppIcon.icns  Info.plist
src/: bright_stars.rs  camera.rs  camera_backend.rs  colormaps.rs  fits_source.rs  gev_camera.rs  histogram.rs  imageview.rs  indi_camera.rs  main.rs  overlays.rs  sim.rs
src/widgets/: button.rs  checkbox.rs  combo_box.rs  mod.rs  slider.rs  toggle_button.rs
src/widgets/themes/: dark.rs  light.rs  mod.rs  night.rs
tests/: generate_db.rs
